# DenOfIz

./: .clang-format  .cursorignore  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  NuGet-Usage-Example.md  README.md  main.cpp  pack-nuget.ps1  pack-nuget.sh  vcpkg.json  version.txt
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  README.md  TODO.md
Engine/Core/: CMakeLists.txt
Engine/Core/Include/DenOfIzCore/: Cast.h  Common.h  Common_Apple.h  Common_Macro.h  Common_Windows.h  (+9 more)
Engine/Core/Source/: Logger.cpp  Time.cpp  Utilities.cpp
Engine/Core/Tests/: CMakeLists.txt
Engine/Documentation/: ResourceBinding.md
Engine/Examples/: CMakeLists.txt  Examples.cpp
Engine/Examples/Base/: CMakeLists.txt
Engine/Examples/PushConstants/: CMakeLists.txt  main.cpp
Engine/Examples/RenderTarget/: CMakeLists.txt  main.cpp
Engine/Examples/RootConstants/: CMakeLists.txt  main.cpp
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/Tests/: CMakeLists.txt
Engine/The-Forge/: CMakeLists.txt
Engine/The-Forge/Include/: TheForgeContext.h
Engine/The-Forge/Source/: TFCommon.cpp  TheForgeContext.cpp
Engine/The-Forge/cmake/: theforge_helper.cmake
Engine/cmake/: include_dxcompiler.cmake  include_metalirconverter.cmake
Examples/: CMakeLists.txt
Examples/AnimatedFoxExample/: CMakeLists.txt  main.cpp
Examples/AnimatedFoxExample/Source/: AnimatedFoxExample.cpp
Examples/Assets/Models/: Fox.gltf
Examples/Assets/SVG/: folder.txt  milk-tea-credits.txt
Examples/Assets/Shaders/: ColoredSphere.vs.hlsl  DefaultRenderPipeline.ps.hlsl  DefaultRenderPipeline.vs.hlsl  FontShader.ps.hlsl  FontShader.vs.hlsl  OpaqueColoredSphere.ps.hlsl  SkinnedMesh.ps.hlsl  SkinnedMesh.vs.hlsl  TransparentGlassSphere.ps.hlsl
Examples/Base/: CMakeLists.txt
Examples/Base/Source/: Camera.cpp  DefaultRenderPipeline.cpp  InteropMathConverter.cpp  Main.cpp  NullTexture.cpp  PerDrawBinding.cpp  PerFrameBinding.cpp  PerMaterialBinding.cpp  QuadPipeline.cpp  SphereAsset.cpp
Examples/Bindless/: CMakeLists.txt  main.cpp
Examples/Bindless/Source/: BindlessExample.cpp
Examples/FontRendering/: CMakeLists.txt  main.cpp
Examples/FontRendering/Source/: FontRenderingExample.cpp
Examples/MeshShaderGrass/: CMakeLists.txt  main.cpp
Examples/MeshShaderGrass/Source/: MeshShaderGrassExample.cpp
Examples/RayTracedProceduralGeometry/: CMakeLists.txt
Examples/RayTracedProceduralGeometry/Source/: RayTracedProceduralGeometryExample.cpp
Examples/RayTracedTriangle/: CMakeLists.txt  CREDITS.md  main.cpp
Examples/RayTracedTriangle/Source/: RayTracedTriangleExample.cpp
Examples/RenderTarget/: CMakeLists.txt  main.cpp
Examples/RenderTarget/Source/: RenderTargetExample.cpp
Examples/RootConstants/Source/: RootConstantExample.cpp
Examples/SimpleTriangle/: CMakeLists.txt  main.cpp
Examples/SimpleTriangle/Source/: SimpleTriangleExample.cpp
Examples/TextRendering/: CMakeLists.txt  main.cpp
Examples/TextRendering/Source/: TextRenderingExample.cpp
Examples/Transparency/: CMakeLists.txt  main.cpp
Examples/Transparency/Source/: ColoredSphereAsset.cpp  ColoredSpherePipeline.cpp  TransparencyExample.cpp
Examples/UIExample/: CMakeLists.txt  main.cpp
Examples/UIExample/Source/: Spinning3DCubeWidget.cpp  UIExample.cpp
Examples/VGExample/: CMakeLists.txt  main.cpp
Examples/VGExample/Source/: VGExample.cpp
Game/: CMakeLists.txt
Game/Include/DenOfIzGame/: MainApp.h  Raytracing.h  Settings.h
Game/Shaders/FSL/: RayQuery.comp.fsl  ShaderList.fsl  ShaderUtilities.h.fsl
Game/Source/: DemoScene.cpp  MainApp.cpp  Raytracing.cpp
Graphics/: CMakeLists.txt  Packages.cmake  Sources.cmake
Graphics/Assets/Shaders/: fs.hlsl
Graphics/Include/DenOfIzGraphics/: DenOfIzGraphics.h  DenOfIzGraphics_Ext.h
Graphics/Source/Animation/: Animation.cpp  AnimationSetup.cpp  AnimationStateManager.cpp  AnimationStateManager2.cpp  AnimationSystem.cpp  AnimationTrack.cpp  AnimationUtils.cpp  BlendingJob.cpp  IKAimJob.cpp  IKTwoBoneJob.cpp  LocalToModelJob.cpp  MotionBlendingJob.cpp  OzzAnimation.cpp  SamplingJob.cpp  Skeleton.cpp  SkinningJob.cpp  TrackSamplingJob.cpp  TrackTriggeringJob.cpp
Graphics/Source/Backends/: GraphicsApi.cpp
Graphics/Source/Data/: AlignedDataWriter.cpp  BatchResourceCopy.cpp  Geometry.cpp  Texture.cpp  VertexTypes.cpp
Graphics/Source/Input/: Controller.cpp  EventHandler.cpp  InputSystem.cpp  Window.cpp
Graphics/Source/Renderer/: ComputeTest.cpp  SimpleRenderer.cpp
Graphics/Source/UI/: Clay.cpp  ClayClipboard.cpp  ClayContext.cpp  ClayRenderer.cpp  ClayTextCache.cpp  ClayWrapper.cpp  FullscreenQuadPipeline.cpp  UIManager.cpp  UIShapeCache.cpp  UIShapes.cpp  UITextVertexCache.cpp
Graphics/Source/Utilities/: DZArena.cpp  Engine.cpp  FrameDebugRenderer.cpp  InteropMathConverter.cpp  InteropUtilities.cpp  StepTimer.cpp  Time.cpp  Utilities.cpp
Graphics/Source/Vector2d/: SvgLoader.cpp  VGPipeline.cpp  VGShapes.cpp  VGTransform.cpp  VectorGraphics.cpp
Graphics/Swig/: CMakeLists.txt  DenOfIzGraphics.i  SWIG.md
Graphics/Tests/: .gitignore  CMakeLists.txt
Graphics/Tests/Source/: BitSetTest.cpp  TestComparators.h
Graphics/Tools/: CMakeLists.txt  FontToEmbeddedInl.cpp
Graphics/_ThirdParty/: ExternalSystem_D3D12MemoryAllocator.cmake  build_dxcompiler_osx.sh
Graphics/_ThirdParty/Tiny/: dds.h
Graphics/cmake/: DenOfIzGraphicsConfig.cmake.in
Swig/: CMakeLists.txt  DenOfIzGraphics.i  DenOfIzGraphics_Dxc.i  DenOfIzGraphics_Input.i  SWIG.md
Swig/NuGet/: DenOfIzGraphics.nuspec.in  DenOfIzGraphics.targets.in  README.md  build_package  build_package.bat  build_package.ps1  build_package.sh  test_package  test_package.ps1  test_package.sh
Swig/NuGet/nuget_package/: DenOfIzGraphics.nuspec
Swig/Targets/: CSharp.cmake  Java.cmake
Swig/Targets/CSharp/: .gitignore  CSharp.cmake  DenOfIzGraphics_CSharp.i  Example.cs  FrameSync_Cache_CSharp.i  NuGet.md  Nuget_Exe.cmake  SwapChain_Cache_CSharp.i  build_nuget.sh
Swig/Targets/Java/: .gitignore  DenOfIzGraphics_Java.i  FrameSync_Cache_Java.i  Java.cmake  Maven.cmake  SwapChain_Cache_Java.i
(+882 files in other folders)
